--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Document</title>
 </head>
 <body>
@@ -57,8 +57,8 @@
       <td th:text="${product.category.name}">Larry</td>
       <td><img src="" height="100px" width="100px"  th:src="@{${'/images/' + product.imageName}}"></td>
 
-      <td><a href="" th:href="@{/admin/product/delete/{id}(id=${product.id})}" class="btn btn-danger">Delete</a></td>
-      <td><a href="" th:href="@{/admin/product/update/{id}(id=${product.id})}" class="btn btn-warning">Update</a></td>
+      <td><a href="" th:href="@{/admin/product/delete/{id}(id=${product.id})}" class="btn btn-danger"><i class="fa fa-trash" style="font-size:25px;"></i></a></td>
+      <td><a href="" th:href="@{/admin/product/update/{id}(id=${product.id})}" class="btn btn-warning"><i class="fa fa-edit" style="font-size:25px"></i></a></td>
 
     </tr>
     </tbody>
