--- a/src/main/resources/templates/categoriesAdd.html
+++ b/src/main/resources/templates/categoriesAdd.html
@@ -9,13 +9,13 @@
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
           integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Integrated Project</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light" >
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img th:src="@{/images/logo.png}"  src="../static/images/logo.png" width="auto" height="40" class="d-inline-block align-top" alt=""/>
+            <img th:src="@{/images/logo.jpg}"  src="../static/images/logo.jpg" width="auto" height="40" class="d-inline-block align-top" alt=""/>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -36,18 +36,22 @@
         </div>
     </div>
 </nav>
-<div class="container">
+<div class="container-fluid p-3 my-3 bg-dark text-white">
+    <h1 align="center">Welcome to Add Category Section</h1>
+    <p align="center">Here you can Add New Category by Just Typing the Name of Category in Below Given Text Area</p>
+</div>
+<div class="container p-3 my-3 bg-light text-black">
     <div class="row">
         <div class="col-sm-4">
             <form th:action="@{/admin/categories/add}" method="post" th:object="${category}">
                 <input type="hidden" name="id"  th:field="*{id}">
                 <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" class="form-control" required th:field="*{name}" name="name" id="name"  placeholder="Enter name">
+                    <label for="name">Category Name :</label>
+                    <input type="text" class="form-control" required th:field="*{name}" name="name" id="name" placeholder="Please Enter the Category Name here">
 
                 </div>
 
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-info">Add!</button>
             </form>
         </div>
     </div>
