--- a/src/main/resources/templates/productsAdd.html
+++ b/src/main/resources/templates/productsAdd.html
@@ -10,12 +10,17 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <title>Integrated Project</title>
+  <style>
+        nav{
+    background: linear-gradient(to right, #536162, #f3f4ed);
+  }
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img th:src="@{/images/logo.png}" src="../static/images/logo.png" width="auto" height="40"
+      <img th:src="@{/images/logo.jpg}" src="../static/images/logo.jpg" width="auto" height="40"
            class="d-inline-block align-top" alt=""/>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
