--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-  <title>Document</title>
+  <title>Integrated Project</title>
   <style>
   body{
 
@@ -95,7 +95,7 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #34656d; color: #ffffff;">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img th:src="@{/images/logo.png}"  src="../static/images/logo.png" width="auto" height="40" class="d-inline-block align-top" alt=""/>
+      <img th:src="@{/images/logo.jpg}"  src="../static/images/logo.jpg" width="auto" height="40" class="d-inline-block align-top" alt=""/>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -120,7 +120,7 @@
     <h1 align="center">Welcome to Add Products Section</h1>
     <p align="center">Here you can Add New Products for your inventory and get them going quickly. Happy Selling!</p>
 </div>
-<div class="container-fluid">
+<div class="container">
 
   <a th:href="@{/admin/products/add}" style="margin: 20px 0" class="btn"><i class="fas fa-plus-square"></i>
     Add Product</a>
