Added some updations in googleauth

--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -14,6 +14,14 @@
         nav{
     background: linear-gradient(to right, #536162, #f3f4ed);
   }
+  .card{
+    border-radius: 2%;
+    background: linear-gradient(to right, #bbbbbb, #f3f4ed);
+    box-shadow: 0 0 50px 10px rgba(0, 0, 0, 0.200);
+  }
+  .card:hover{
+    box-shadow: 0 0 50px 10px rgba(0, 0, 0, 0.400);
+  }
     </style>
 </head>
 <body>
