--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" th:href="@{/shop}" href="#">shop</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Sign Up</a>
+                    <a class="nav-link" th:href="@{/register}" href="#">Sign Up</a>
                 </li>
 
             </ul>
