--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -189,9 +189,10 @@
                                 <span><strong>₹<span th:text="${total}"></span></strong></span>
                             </li>
                         </ul>
-
+                        <button type="radio" disabled></button>Cash On delivery
                         <form action="" method="post" th:action="@{/payNow}" >
-                            <button type="submit"  class="btn btn-primary btn-block waves-effect waves-light">Pay Now</button>
+
+                            <button type="submit"  class="btn btn-primary btn-block waves-effect waves-light">Order Now</button>
                         </form>
 
                     </div>
