added login and shop page front-end

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -629,7 +629,7 @@ img{
                         <a href="#" class="button">View Menu</a>
                     </div>
 
-                    <img src="assets/img/home.jpg" alt="" class="home__img">
+                    <img th:src="@{/assets/img/home.jpg}" alt="" class="home__img">
                 </div>
             </section>
 
