added some functionality

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -629,7 +629,7 @@ img{
                         <a href="#" class="button">View Menu</a>
                     </div>
 
-                    <img th:src="@{/images/home1.jpg}" alt="" class="home__img">
+                    <img th:src="@{/images/home1.jpeg}" alt="" class="home__img">
                 </div>
             </section>
 
