--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -741,7 +741,7 @@ color:#069C54;
     </nav>
 </header>
 <main class="l-main">
-    <div class="container">
+    <div class="container" style="margin-top: 5%;">
 
         <!--Section: Block Content-->
         <section class="mt-5 mb-4">
