--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -739,7 +739,7 @@
     </nav>
 </header>
 <main class="l-main">
-    <div class="container">
+    <div class="container" style="margin-top: 5%;">
 
     <!--Section: Block Content-->
     <section class="mt-5 mb-4">
