--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -573,6 +573,13 @@
                 height: 640px;
             }
         }
+        #btn{
+background-color:#069C54;
+color:white;
+}
+#a1{
+color:#069C54;
+}
 
         </style>
 
@@ -651,12 +658,12 @@
               <!--==========PRODUCTS==========-->
 
               <div class="container" style="margin-top: 100px">
-                  <div class="row">
+                  <div class="row" id="a1">
                       <div class="col-sm-3">
                           <h4>Categories</h4>
                           <ul class="list-group">
-                              <a th:href="@{/shop}"><li class="list-group-item">All Products</li></a>
-                              <a href="" th:each="category, iStat : ${categories}"
+                              <a th:href="@{/shop}" id="a1"><li class="list-group-item">All Products</li></a>
+                              <a href="" th:each="category, iStat : ${categories}" id="a1"
                                  th:href="@{/shop/category/{id}(id=${category.id})}"><li
                                       class="list-group-item" th:text="${category.name}"></li></a>
 
@@ -673,7 +680,7 @@
                                           <h5 class="card-title" th:text="${product.name}"></h5>
                                           <h4>₹ <span th:text="${product.price}"></span></h4>
                                           <p th:text="${product.description}" ></p>
-                                          <a href="#" th:href="@{/shop/viewproduct/{id}(id=${product.id})}" class="btn btn-primary">View Product</a>
+                                          <a href="#" th:href="@{/shop/viewproduct/{id}(id=${product.id})}" class="btn" id="btn">View Product</a>
                                       </div>
                                   </div>
                               </div>
