--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -587,7 +587,7 @@ img{
         <!--========== HEADER ==========-->
         <header class="l-header" id="header">
             <nav class="nav bd-container">
-                <a href="#" class="nav__logo">Tasty</a>
+                <a href="#" class="nav__logo">SUP</a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
