--- a/src/main/resources/templates/orderPlaced.html
+++ b/src/main/resources/templates/orderPlaced.html
@@ -741,7 +741,7 @@
     </nav>
 </header>
 <br><br><br>
-<main class="l-main">
+<main class="l-main" style="margin-left: 15%; margin-top:8%;">
 <div class="container">
     <div class="row">
         <div class="well col-xs-10 col-sm-10 col-md-6 col-xs-offset-1 col-sm-offset-1 col-md-offset-3">
@@ -786,11 +786,11 @@
     </div>
 </div>
 
+    <!--========== Contact us ==========-->
 
 
 
-
-    <section class="contact section bd-container" id="contact">
+    <section class="contact section bd-container" id="contact" style="margin-top: 5%;">
         <div class="contact__container bd-grid">
             <div class="contact__data">
                 <span class="section-subtitle contact__initial">Let's talk</span>
