--- a/src/main/resources/templates/orderPlaced.html
+++ b/src/main/resources/templates/orderPlaced.html
@@ -709,7 +709,7 @@
 <!--========== HEADER ==========-->
 <header class="l-header" id="header">
     <nav class="nav bd-container">
-        <a href="#" class="nav__logo">SUP</a>
+        <a href="#" class="nav__logo" th:href="@{/}">SUP</a>
 
         <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
@@ -786,23 +786,6 @@
     </div>
 </div>
 
-
-
-
-
-    <section class="contact section bd-container" id="contact">
-        <div class="contact__container bd-grid">
-            <div class="contact__data">
-                <span class="section-subtitle contact__initial">Let's talk</span>
-                <h2 class="section-title contact__initial">Contact us</h2>
-                <p class="contact__description">If you want to take the best advantage of our customer sercies , Please contact us 24/7</p>
-            </div>
-
-            <div class="contact__button">
-                <a href="#" class="button">Contact us now</a>
-            </div>
-        </div>
-    </section>
 </main>
 
 <footer class="footer section bd-container">
