--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -695,7 +695,7 @@
           <!--========== HEADER ==========-->
           <header class="l-header" id="header">
               <nav class="nav bd-container">
-                  <a href="#" class="nav__logo">SUP</a>
+                  <a href="#" class="nav__logo" th:href="@{/}">SUP</a>
 
                   <div class="nav__menu" id="nav-menu">
                       <ul class="nav__list">
