--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -709,7 +709,7 @@ color:#069C54;
 <!--========== HEADER ==========-->
 <header class="l-header" id="header">
     <nav class="nav bd-container">
-        <a href="#" class="nav__logo">SUP</a>
+        <a href="#" class="nav__logo" th:href="@{/}">SUP</a>
 
         <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
@@ -741,7 +741,7 @@ color:#069C54;
     </nav>
 </header>
 <main class="l-main">
-    <div class="container" style="margin-top: 5%;">
+    <div class="container" style="margin-top: 10%;">
 
         <!--Section: Block Content-->
         <section class="mt-5 mb-4">
@@ -754,9 +754,9 @@ color:#069C54;
 
                     <!-- Card -->
                     <div class="card wish-list mb-4">
-                        <div class="card-body">
+                        <div class="card-body" style="padding:5%; box-shadow: 0 0 50px rgba(6, 156, 84, 0.200);">
 
-                            <h5 class="mb-4">Cart (<span th:text="${cartCount}">2</span> items)</h5>
+                            <h5 class="mb-4" id="a1">Cart (<span th:text="${cartCount}">2</span> items)</h5>
 
                             <div class="row mb-4" th:each="item, iStat : ${cart}">
                                 <div class="col-md-5 col-lg-3 col-xl-3">
@@ -771,8 +771,8 @@ color:#069C54;
                                     <div>
                                         <div class="d-flex justify-content-between">
                                             <div>
-                                                <h5 th:text="${item.name}">Blue denim shirt</h5>
-                                                <p class="mb-3 text-uppercase small">Weight: <span th:text="${item.weight}"></span> grams</p>
+                                                <h5 th:text="${item.name}" id="a1">Blue denim shirt</h5>
+<!--                                                <p class="mb-3 text-uppercase small">Weight: <span th:text="${item.weight}"></span> grams</p>-->
 
                                             </div>
 
@@ -804,7 +804,7 @@ color:#069C54;
 
                     <!-- Card -->
                     <div class="card mb-4">
-                        <div class="card-body">
+                        <div class="card-body" style="padding:5%; box-shadow: 0 0 50px rgba(6, 156, 84, 0.200);">
 
                             <h5 class="mb-3">The total amount </h5>
 
@@ -837,7 +837,7 @@ color:#069C54;
 
                     <!-- Card -->
                     <div class="card mb-4">
-                        <div class="card-body">
+                        <div class="card-body" style="padding:5%; box-shadow: 0 0 50px rgba(6, 156, 84, 0.200);">
 
                             <a class="dark-grey-text d-flex justify-content-between" data-toggle="collapse" href="#collapseExample"
                                aria-expanded="false" aria-controls="collapseExample" id="a1">
@@ -867,19 +867,6 @@ color:#069C54;
         <!--Section: Block Content-->
 
     </div>
-    <section class="contact section bd-container" id="contact">
-        <div class="contact__container bd-grid">
-            <div class="contact__data">
-                <span class="section-subtitle contact__initial">Let's talk</span>
-                <h2 class="section-title contact__initial">Contact us</h2>
-                <p class="contact__description">If you want to take the best advantage of our customer sercies , Please contact us 24/7</p>
-            </div>
-
-            <div class="contact__button">
-                <a href="#" class="button">Contact us now</a>
-            </div>
-        </div>
-    </section>
 </main>
 
 <footer class="footer section bd-container">
@@ -917,7 +904,7 @@ color:#069C54;
         <div class="footer__content">
             <h3 class="footer__title">Address</h3>
             <ul>
-                <li>Cahndigarh - India</li>
+                <li>Chandigarh - India</li>
                 <li>Chitkara University</li>
                 <li>9134 - 915 - 606</li>
                 <li>SUPindustries@email.com</li>
