--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -691,7 +691,7 @@
           <!--========== HEADER ==========-->
           <header class="l-header" id="header">
               <nav class="nav bd-container">
-                  <a href="#" class="nav__logo">SUP</a>
+                  <a href="#" class="nav__logo" th:href="@{/}">SUP</a>
 
                   <div class="nav__menu" id="nav-menu">
                       <ul class="nav__list">
@@ -733,7 +733,6 @@
                         </div>
                         <div class="form-group">
                             <input type="password" name="password" id="password" placeholder="Enter your password..." class="form-control form-control-lg">
-
                         </div>
 
 
