--- a/src/main/resources/templates/productsAdd.html
+++ b/src/main/resources/templates/productsAdd.html
@@ -19,7 +19,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" th:href="@{/}">
       <img th:src="@{/images/logo.jpg}" src="../static/images/logo.jpg" width="auto" height="40"
            class="d-inline-block align-top" alt=""/>
     </a>
