added some final touch

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -655,7 +655,7 @@ img{
 
                 <div class="services__container  bd-grid">
                     <div class="services__content">
-                        <img th:src="@{/images/medicine.png}" alt="" >
+                        <img th:src="@{/images/medicine.png}" alt="" style="width: 64px; height: 64px; margin-bottom: 20px;">
                         <h3 class="services__title">Excellent Medical Products</h3>
                         <p class="services__description">We offer our clients excellent quality products for many years, with the best and trustworthy hands.</p>
                     </div>
@@ -681,7 +681,7 @@ img{
 
                 <div class="menu__container bd-grid">
                     <div class="menu__content">
-                        <img src="assets/img/plate1.jpg" alt="" class="menu__img" style="border-radius: 20%">
+                        <img src="@{/images/med.jpg}" alt="" class="menu__img" style="border-radius: 20%">
                         <h3 class="menu__name">Herbal Medicine</h3>
                         <span class="menu__detail">Great for Cough And Cold</span>
                         <span class="menu__preci">$5.00</span>
@@ -689,7 +689,7 @@ img{
                     </div>
 
                     <div class="menu__content">
-                        <img src="assets/img/gloves.jpg" alt="" class="menu__img" style="border-radius: 20%">
+                        <img th:src="@{/images/gloves.jpg}" alt="" class="menu__img" style="border-radius: 20%">
                         <h3 class="menu__name">Rubber Latex Gloves</h3>
                         <span class="menu__detail">Best Quality Surgical Gloves</span>
                         <span class="menu__preci">$1.00</span>
@@ -697,7 +697,7 @@ img{
                     </div>
 
                     <div class="menu__content">
-                        <img src="assets/img/masks.jpg" alt="" class="menu__img" style="border-radius: 20%">
+                        <img th:src="@{/images/masks.jpg}" alt="" class="menu__img" style="border-radius: 20%">
                         <h3 class="menu__name">Surgical Masks</h3>
                         <span class="menu__detail">Top Quality Masks at Cheap Price</span>
                         <span class="menu__preci">$0.20</span>
@@ -775,7 +775,7 @@ img{
                 <div class="footer__content">
                     <h3 class="footer__title">Address</h3>
                     <ul>
-                        <li>Cahndigarh - India</li>
+                        <li>Chandigarh - India</li>
                         <li>Chitkara University</li>
                         <li>9134 - 915 - 606</li>
                         <li>tastyfood@email.com</li>
