--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -870,7 +870,7 @@
                   <div class="footer__content">
                       <h3 class="footer__title">Address</h3>
                       <ul>
-                          <li>Cahndigarh - India</li>
+                          <li>Chandigarh - India</li>
                           <li>Chitkara University</li>
                           <li>9134 - 915 - 606</li>
                           <li>SUPindustries@email.com</li>
