--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -654,7 +654,7 @@
         transition: all .4s;
         cursor: pointer;
       }
-      .icons div:nth-child(2){
+      .icons div:nth-child(1){
         border: 2px solid #4285f4;
       }
       .icons div i{
@@ -748,65 +748,16 @@
 
             			<p>or login with</p>
             			<div class="icons">
+
             				<div>
-            					<i class="fab fa-facebook-square"></i><span>Facebook</span>
-            				</div>
-            				<div>
-            					<i class="fab fa-google"></i><span><a href="/oauth2/authorization/google"> Google </a></span>
+            					<a href="/oauth2/authorization/google"><span><i class="fab fa-google"></i></span> Google </a>
             				</div>
             			</div>
                     </form>
             	</div>
               </div>
 
-              <!--========== MENU ==========-->
-              <!-- <section class="menu section bd-container" id="menu">
-                  <span class="section-subtitle">Special</span>
-                  <h2 class="section-title">Products of the week</h2>
 
-                  <div class="menu__container bd-grid">
-                      <div class="menu__content">
-                          <img src="assets/img/plate1.jpg" alt="" class="menu__img" style="border-radius: 20%">
-                          <h3 class="menu__name">Herbal Medicine</h3>
-                          <span class="menu__detail">Great for Cough And Cold</span>
-                          <span class="menu__preci">$5.00</span>
-                          <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
-                      </div>
-
-                      <div class="menu__content">
-                          <img src="assets/img/gloves.jpg" alt="" class="menu__img" style="border-radius: 20%">
-                          <h3 class="menu__name">Rubber Latex Gloves</h3>
-                          <span class="menu__detail">Best Quality Surgical Gloves</span>
-                          <span class="menu__preci">$1.00</span>
-                          <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
-                      </div>
-
-                      <div class="menu__content">
-                          <img src="assets/img/masks.jpg" alt="" class="menu__img" style="border-radius: 20%">
-                          <h3 class="menu__name">Surgical Masks</h3>
-                          <span class="menu__detail">Top Quality Masks at Cheap Price</span>
-                          <span class="menu__preci">$0.20</span>
-                          <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
-                      </div>
-                  </div>
-              </section> -->
-
-              <!--===== APP =======-->
-              <!-- <section class="app section bd-container">
-                  <div class="app__container bd-grid">
-                      <div class="app__data">
-                          <span class="section-subtitle app__initial">App</span>
-                          <h2 class="section-title app__initial">App is aviable</h2>
-                          <p class="app__description">Find our application and download it, you can make reservations, food orders, see your deliveries on the way and much more.</p>
-                          <div class="app__stores">
-                              <a href="#"><img src="assets/img/app1.png" alt="" class="app__store"></a>
-                              <a href="#"><img src="assets/img/app2.png" alt="" class="app__store"></a>
-                          </div>
-                      </div>
-
-                      <img src="assets/img/movil-app.png" alt="" class="app__img">
-                  </div>
-              </section> -->
 
               <!--========== CONTACT US ==========-->
               <section class="contact section bd-container" id="contact">
@@ -860,7 +811,7 @@
                   <div class="footer__content">
                       <h3 class="footer__title">Address</h3>
                       <ul>
-                          <li>Cahndigarh - India</li>
+                          <li>Chandigarh - India</li>
                           <li>Chitkara University</li>
                           <li>9134 - 915 - 606</li>
                           <li>SUPindustries@email.com</li>
